[gd_scene load_steps=20 format=3 uid="uid://cxw1ubu0754eo"]

[ext_resource type="Script" path="res://GameManager.gd" id="1_c2qwo"]
[ext_resource type="Theme" uid="uid://c0rx5pkmn4v4y" path="res://themes/MainTheme.tres" id="2_wxehv"]
[ext_resource type="Texture2D" uid="uid://05clh0xxdsu5" path="res://sprites/personaje2.png" id="3_2a3vo"]
[ext_resource type="Texture2D" uid="uid://bp7rdbg7g5vut" path="res://sprites/Pill2_color.png" id="3_57rew"]
[ext_resource type="Theme" uid="uid://b45eh8qt6frxm" path="res://themes/ScriptTheme.tres" id="3_ofllb"]
[ext_resource type="Texture2D" uid="uid://pr7ongox1m51" path="res://sprites/personaje1.png" id="3_uq4oc"]
[ext_resource type="Texture2D" uid="uid://c0i8812ypst1" path="res://sprites/Pill3_color.png" id="4_6doed"]
[ext_resource type="Texture2D" uid="uid://cxiyr67b5twc" path="res://sprites/Pill4_color.png" id="5_8ldn6"]
[ext_resource type="Texture2D" uid="uid://d2fy4rdmjttfg" path="res://sprites/Pill5_color.png" id="6_edkup"]
[ext_resource type="Texture2D" uid="uid://ragt6nvr4as" path="res://sprites/personaje3.png" id="8_4fpjr"]
[ext_resource type="AudioStream" uid="uid://bf7xmo8tb3etp" path="res://sounds/68212__zebraphone__loop5.mp3" id="10_7nnyv"]
[ext_resource type="AudioStream" uid="uid://cncooenk8tgic" path="res://sounds/41021__hello_flowers__if-you-see-kat120bpm.wav" id="10_cdsa3"]
[ext_resource type="Texture2D" uid="uid://lv87x46afso7" path="res://Logo.png" id="13_vd0eb"]

[sub_resource type="InputEventKey" id="InputEventKey_82lp1"]
device = -1
keycode = 4194309

[sub_resource type="Shortcut" id="Shortcut_b71qg"]
events = [SubResource("InputEventKey_82lp1")]

[sub_resource type="InputEventKey" id="InputEventKey_07d6q"]
device = -1
keycode = 67
unicode = 99

[sub_resource type="Shortcut" id="Shortcut_365m6"]
events = [SubResource("InputEventKey_07d6q")]

[sub_resource type="InputEventKey" id="InputEventKey_khkfd"]
device = -1
keycode = 4194308

[sub_resource type="Shortcut" id="Shortcut_o8cbr"]
events = [SubResource("InputEventKey_khkfd")]

[node name="GameManager" type="Node"]
script = ExtResource("1_c2qwo")
game_music_stream = ExtResource("10_7nnyv")
min_spawn_time = 4
max_spawn_time = 14

[node name="Timer" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_cdsa3")
autoplay = true

[node name="Score" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_ofllb")

[node name="TitleLabel" type="Label" parent="Score"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_bottom = 144.0
grow_horizontal = 0
theme = ExtResource("3_ofllb")
text = "Score: XXXX"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_wxehv")

[node name="Collage" type="Control" parent="StartMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Character" type="TextureRect" parent="StartMenu/Collage"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -572.0
offset_top = -165.0
offset_right = -60.0
offset_bottom = 347.001
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.75, 0.75)
texture = ExtResource("3_uq4oc")

[node name="Character2" type="TextureRect" parent="StartMenu/Collage"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -390.0
offset_top = -173.0
offset_right = 122.0
offset_bottom = 339.001
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.75, 0.75)
texture = ExtResource("3_2a3vo")

[node name="Character3" type="TextureRect" parent="StartMenu/Collage"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -772.0
offset_top = -181.0
offset_right = -260.0
offset_bottom = 331.001
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.75, 0.75)
texture = ExtResource("8_4fpjr")

[node name="TextureRect" type="TextureRect" parent="StartMenu/Collage"]
layout_mode = 0
offset_left = 228.0
offset_top = 273.0
offset_right = 328.0
offset_bottom = 373.0
rotation = 1.70575
pivot_offset = Vector2(50, 50)
texture = ExtResource("3_57rew")

[node name="TextureRect2" type="TextureRect" parent="StartMenu/Collage"]
layout_mode = 0
offset_left = 733.0
offset_top = 403.0
offset_right = 833.0
offset_bottom = 503.0
rotation = -0.00467108
texture = ExtResource("3_57rew")

[node name="TextureRect3" type="TextureRect" parent="StartMenu/Collage"]
layout_mode = 0
offset_left = 186.0
offset_top = 432.0
offset_right = 286.0
offset_bottom = 532.0
rotation = -0.598083
pivot_offset = Vector2(50, 50)
texture = ExtResource("4_6doed")

[node name="TextureRect4" type="TextureRect" parent="StartMenu/Collage"]
layout_mode = 0
offset_left = 929.0
offset_top = 385.0
offset_right = 1029.0
offset_bottom = 485.0
rotation = 0.426205
texture = ExtResource("5_8ldn6")

[node name="TextureRect5" type="TextureRect" parent="StartMenu/Collage"]
layout_mode = 0
offset_left = 52.0
offset_top = 465.0
offset_right = 152.0
offset_bottom = 565.0
rotation = 0.966046
pivot_offset = Vector2(50, 50)
texture = ExtResource("3_57rew")

[node name="TextureRect6" type="TextureRect" parent="StartMenu/Collage"]
layout_mode = 0
offset_left = 995.0
offset_top = 382.0
offset_right = 1095.0
offset_bottom = 482.0
rotation = -1.13097
texture = ExtResource("3_57rew")

[node name="TextureRect7" type="TextureRect" parent="StartMenu/Collage"]
layout_mode = 0
offset_left = 556.0
offset_top = 428.0
offset_right = 656.0
offset_bottom = 528.0
rotation = 0.516202
pivot_offset = Vector2(50, 50)
texture = ExtResource("4_6doed")

[node name="TextureRect8" type="TextureRect" parent="StartMenu/Collage"]
layout_mode = 0
offset_left = 51.0
offset_top = 312.0
offset_right = 151.0
offset_bottom = 412.0
rotation = -0.00467108
texture = ExtResource("5_8ldn6")

[node name="TextureRect9" type="TextureRect" parent="StartMenu/Collage"]
layout_mode = 0
offset_left = 345.0
offset_top = 435.0
offset_right = 445.0
offset_bottom = 535.0
rotation = 0.661116
pivot_offset = Vector2(50, 50)
texture = ExtResource("5_8ldn6")

[node name="TextureRect10" type="TextureRect" parent="StartMenu/Collage"]
layout_mode = 0
offset_left = 955.0
offset_top = 321.0
offset_right = 1055.0
offset_bottom = 421.0
rotation = -3.47059
texture = ExtResource("6_edkup")

[node name="TextureRect11" type="TextureRect" parent="StartMenu/Collage"]
layout_mode = 0
offset_left = 41.0
offset_top = 172.0
offset_right = 141.0
offset_bottom = 272.0
rotation = 0.516202
pivot_offset = Vector2(50, 50)
texture = ExtResource("6_edkup")

[node name="TextureRect12" type="TextureRect" parent="StartMenu/Collage"]
layout_mode = 0
offset_left = 1088.0
offset_top = 80.0
offset_right = 1188.0
offset_bottom = 180.0
rotation = 0.776973
texture = ExtResource("5_8ldn6")

[node name="TitleLabel" type="RichTextLabel" parent="StartMenu"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -279.0
offset_bottom = -129.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/normal_font_size = 140
bbcode_enabled = true
text = "[center][rainbow freq=1.5 sat=0.4 val=0.5][wave amp=100.0 freq=1.62fff5 connected=1]Serve me laugh![/wave][/rainbow][/center]"

[node name="StartButton" type="Button" parent="StartMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -124.0
offset_right = 150.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 2
shortcut = SubResource("Shortcut_b71qg")
text = "START!"

[node name="CreditsButton" type="Button" parent="StartMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -4.0
offset_right = 150.0
offset_bottom = 102.0
grow_horizontal = 2
grow_vertical = 2
shortcut = SubResource("Shortcut_365m6")
text = "Credits"

[node name="CreditsMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_wxehv")

[node name="Logo" type="TextureRect" parent="CreditsMenu"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.083
anchor_right = 1.0
anchor_bottom = 0.713
offset_top = 0.215996
offset_bottom = 8.97595
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("13_vd0eb")
expand_mode = 3
stretch_mode = 5

[node name="BackButton" type="Button" parent="CreditsMenu"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -148.0
offset_right = 150.0
offset_bottom = -42.0
grow_horizontal = 2
grow_vertical = 0
shortcut = SubResource("Shortcut_o8cbr")
text = "Back"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="StartMenu/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="StartMenu/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="CreditsMenu/BackButton" to="." method="_on_back_button_pressed"]
